# routes/api.php
@@ -2,6 +2,7 @@
 
 declare(strict_types=1);
 
+use App\Assignment\Infrastructure\Http\PostCandidatureAutoAssignController;
 use App\Assignment\Infrastructure\Http\PutCandidatureEvaluatorController;
 use App\Candidature\Infrastructure\Http\GetCandidatureValidationController;
 use App\Candidature\Infrastructure\Http\PostCandidatureController;
@@ -9,6 +10,7 @@ use App\Evaluator\Infrastructure\Http\PostEvaluatorController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/candidatures', PostCandidatureController::class);
+Route::post('/candidatures/auto-assign', PostCandidatureAutoAssignController::class);
 Route::get('/candidatures/{id}/validation', GetCandidatureValidationController::class)->whereUlid('id');
 
 Route::post('/evaluators', PostEvaluatorController::class);
